app/sobrenos/sobrenos.module.css
.container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 90vh;
    cursor: grab;
}

.title {
    font-size: 2rem;
    font-weight: bold;
    color: #fff;
    text-align: center;
    margin: 10px;
}

.carouselContainer {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carouselSlide {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media screen and (max-width: 600px) {
    .container {
        flex-direction: column;
        height: auto;
        margin: 10px;
        max-height: 100vh;
        min-height: 100vh;
        width: auto;
    }
    .fundo1{
        overflow: hidden;
    }

    .title {
        font-size: 1.5rem;
    }

    .carouselContainer {
        height: auto;
        width: auto;
        overflow-y: visible;
    }

    .carouselSlide {
        height: auto;
        width: auto;
        overflow-y: visible;
    }
}

